// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormControlLayout is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <input />
</div>
`;

exports[`EuiFormControlLayout props fullWidth is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
/>
`;

exports[`EuiFormControlLayout props icon is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <svg
    class="euiIcon euiFormControlLayout__icon euiIcon--medium"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill-rule="evenodd"
    >
      <path
        d="M7.5 2.236L1.618 14h11.764L7.5 2.236zm.894-.447l5.882 11.764A1 1 0 0 1 13.382 15H1.618a1 1 0 0 1-.894-1.447L6.606 1.789a1 1 0 0 1 1.788 0z"
      />
      <path
        d="M7 6h1v5H7zM7 12h1v1H7z"
      />
    </g>
  </svg>
</div>
`;

exports[`EuiFormControlLayout props iconSide left is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <svg
    class="euiIcon euiFormControlLayout__icon euiIcon--medium"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill-rule="evenodd"
    >
      <path
        d="M7.5 2.236L1.618 14h11.764L7.5 2.236zm.894-.447l5.882 11.764A1 1 0 0 1 13.382 15H1.618a1 1 0 0 1-.894-1.447L6.606 1.789a1 1 0 0 1 1.788 0z"
      />
      <path
        d="M7 6h1v5H7zM7 12h1v1H7z"
      />
    </g>
  </svg>
</div>
`;

exports[`EuiFormControlLayout props iconSide right is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <svg
    class="euiIcon euiFormControlLayout__icon euiFormControlLayout__icon--right euiIcon--medium"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill-rule="evenodd"
    >
      <path
        d="M7.5 2.236L1.618 14h11.764L7.5 2.236zm.894-.447l5.882 11.764A1 1 0 0 1 13.382 15H1.618a1 1 0 0 1-.894-1.447L6.606 1.789a1 1 0 0 1 1.788 0z"
      />
      <path
        d="M7 6h1v5H7zM7 12h1v1H7z"
      />
    </g>
  </svg>
</div>
`;

exports[`EuiFormControlLayout props isLoading is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiLoadingSpinner euiLoadingSpinner--medium euiFormControlLayout__loading"
  />
</div>
`;
